tests/snapshots/info_snapshots__shell_zsh.snap
---
source: tests/info_snapshots.rs
expression: json
---
{
  "contexts": [],
  "facets": {
    "ci": {
      "is_ci": false
    }
  },
  "meta": {
    "schema_version": "0.2.0"
  },
  "traits": {
    "color_level": "none",
    "is_ci": false,
    "is_interactive": false,
    "is_piped_stdin": true,
    "is_piped_stdout": true,
    "is_tty_stderr": false,
    "is_tty_stdin": false,
    "is_tty_stdout": false,
    "supports_hyperlinks": false
  }
}
