tests/snapshots/info_snapshots__vscode_insiders.snap
---
source: tests/info_snapshots.rs
expression: json
---
{
  "contexts": [
    "ide"
  ],
  "evidence": [
    {
      "confidence": 1.0,
      "key": "terminal.stdin.tty",
      "signal": "tty",
      "supports": [
        "terminal.stdin.tty"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "terminal.stdout.tty",
      "signal": "tty",
      "supports": [
        "terminal.stdout.tty"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "terminal.stderr.tty",
      "signal": "tty",
      "supports": [
        "terminal.stderr.tty"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "terminal.interactive",
      "signal": "tty",
      "supports": [
        "terminal.interactive"
      ],
      "value": "false"
    },
    {
      "confidence": 1.0,
      "key": "TERM_PROGRAM",
      "signal": "env",
      "supports": [
        "ide",
        "ide.id"
      ],
      "value": "vscode"
    },
    {
      "confidence": 1.0,
      "key": "TERM_PROGRAM_VERSION",
      "signal": "env",
      "supports": [
        "ide",
        "ide.id"
      ],
      "value": "1.75.0-insider"
    }
  ],
  "facets": {
    "host": "unknown",
    "ide_id": "vscode-insiders"
  },
  "meta": {
    "schema_version": "0.3.0"
  },
  "traits": {
    "color_level": "none",
    "is_interactive": false,
    "is_piped_stdin": true,
    "is_piped_stdout": true,
    "is_tty_stderr": false,
    "is_tty_stdin": false,
    "is_tty_stdout": false,
    "supports_hyperlinks": false
  }
}
